# hy_driver

./: CMakeLists.txt  hy_driver.code-workspace  partitions.csv  readme.md  sdkconfig  sdkconfig.old  temp.c
.claude/: CLAUDE.md  settings.local.json  todo.md
.claude/skills/api-document-generation/: SKILL.md
.claude/skills/comment-generator/: SKILL.md
.claude/skills/embedded-code-review/: SKILL.md
.claude/skills/embedded-code-trimming/: SKILL.md
.claude/skills/embedded-document-generation/: SKILL.md
.claude/skills/embedded-performance-analysis/: SKILL.md
.claude/skills/semgrep-audit/: SKILL.md
.trae/: .ignore
.trae/documents/: 实现 HTTPS 音频流实时播放.md
.trae/rules/: project_rules.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
components/BSP/: CMakeLists.txt
components/BSP/BSP_Drivers/: bsp_drivers.h
components/BSP/IMU/: imu.c  imu.h
components/BSP/Motor/: motor.c  motor.h
components/BSP/STUDIO/: studio.c  studio.h
components/BSP/Servo/: servo_control.c  servo_control.h
components/BSP/UART/: connect_uart.c  connect_uart.h
components/BSP/Wifi/: connect_wifi.c  connect_wifi.h
main/: CMakeLists.txt  idf_component.yml  main.c
main/all_debug/: all_debug.h  all_include.h
main/app_audio_control/: app_audio.c  app_audio.h
main/app_blue_control/: app_blue_control.c  app_blue_control.h  gatts_server.c  gatts_server.h
main/app_move_control/: app_move_control.c  app_move_control.h  app_pid_control.c  app_pid_control.h
main/app_uart_control/: app_uart_control.c  app_uart_control.h
(+2 files in other folders)
